--- a/home.html
+++ b/home.html
@@ -1,33 +1,49 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <title>쿠팡 파트너스</title>
         <meta charset="utf-8">
+        <link href="./css.css" rel="stylesheet" />
     </head>
     <body>
         <h1><a href="home.html">취미 생활 추천</a></h1>
-    <ol>
-        <li><a href="1.html">자전거</a></li>
-        <li><a href="2.html">운동기구</a></li>
-        <li><a href="3.html">프라모델</a></li>
-        <li><a href="4.html">게임</a></li>
-    </ol>
-    <h2>집에서 즐기는 취미생활</h2>
-    <p>
-        코로나 바이러스로 집에만 있기 심심한 요즘..<br>
-        집 안에서도 할 수 있는 취미 생활을 추천해드립니다!
-    </p>
-    <h2>밖에서 즐기는 취미생활</h2>
-    <img src="./bycicle.jpg" width="100%">
-    
-    <p>
-        코로나 때문에 집콕!만 하실 건가요?! <br>
-        잠시 밖에 나가 운동을 해봅시다~ 물론 마스크는 필수지만요!! <br>
-        밖에 나가는 것이 망설여진다면 집에서라도 운동을 해봅시다ㅎㅎ
-    </p>
-    <p>
-        Special Thanks to <a href="https://www.coupang.com/" title="쿠팡 바로가기">COUPANG</a>
-    </p>
+        <div class="wrap">
+            <div id="first_box" class="box">
+                <ol class="first_list">
+                    <li><a href="1.html">자전거</a></li>
+                    <ol class="second_list">
+                        <li>삼천리</li>
+                        <li>기타</li>
+                    </ol>
+                    <li><a href="2.html">운동기구</a></li>
+                    <li><a href="3.html">프라모델</a></li>
+                    <li><a href="4.html">게임</a></li>
+                    <li><a href="5.html">기타 상식</a></li>
+                </ol>
+            </div>
+            <div id="second_box"class="box">
+
+            </div>
+        </div>
+        <div class="wrap">
+            <h2>집에서 즐기는 취미생활</h2>
+            <p class="intro_recommand">
+                코로나 바이러스로 집에만 있기 심심한 요즘..<br>
+                집 안에서도 할 수 있는 취미 생활을 추천해드립니다!
+            </p>
+            <h2>밖에서 즐기는 취미생활</h2>
+            <img src="./bycicle.jpg" width="100%">
+
+            <p class="intro_recommand">
+                코로나 때문에 집콕!만 하실 건가요?! <br>
+                잠시 밖에 나가 운동을 해봅시다~ 물론 마스크는 필수지만요!! <br>
+                밖에 나가는 것이 망설여진다면 집에서라도 운동을 해봅시다ㅎㅎ
+            </p>
+            <p>
+                Special Thanks to <a href="https://www.coupang.com/" title="쿠팡 바로가기">COUPANG</a>
+            </p>
+        </div>
+
     </body>
     
 </html>
