--- a/5.html
+++ b/5.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>¿À´ÃÀÇ °øºÎ</title>
+        <title>ì˜¤ëŠ˜ì˜ ê³µë¶€</title>
         <link href="./css.css" rel="stylesheet" />
+        <meta charset='utf8'>
     </head>
     <body>
         <div id="c1" class="box">
-            <h2>cascading ¿ì¼±¼øÀ§</h2>
+            <h2>cascading ìš°ì„ ìˆœìœ„</h2>
             <ul>
                 <li>!import</li>
                 <li>style attribute</li>
@@ -18,8 +19,8 @@
         <div id="c2" class="contents">
             <h2>margin collaspe</h2>
             <p>
-                ºÎ¸ðÀÎ boxÀÇ ½Ã°¢Àû ¿ä¼Ò°¡ ¾ø´Â °æ¿ì, ºÎ¸ð¿Í ÀÚ½Ä »çÀÌ <br />
-                margin collaspe°¡ ÀÏ¾î³­´Ù.
+                ë¶€ëª¨ì¸ boxì˜ ì‹œê°ì  ìš”ì†Œê°€ ì—†ëŠ” ê²½ìš°, ë¶€ëª¨ì™€ ìžì‹ ì‚¬ì´ <br />
+                margin collaspeê°€ ì¼ì–´ë‚œë‹¤.
             </p>
         </div>
         <div id="c3" class="contents">
@@ -27,18 +28,18 @@
             
             <h4>relative</h4>
             <p>
-                - left, right, top, bottom °°Àº offset ¼Ó¼ºÀº <br />
-                position:relative ÀÏ °æ¿ì¿¡¸¸ µ¿ÀÛÇÑ´Ù. <br />
-                - ÀÚ½ÄÀº ºÎ¸ð¸¦ ±âÁØÀ¸·Î ¿òÁ÷ÀÎ´Ù. <br />
+                - left, right, top, bottom ê°™ì€ offset ì†ì„±ì€ <br />
+                position:relative ì¼ ê²½ìš°ì—ë§Œ ë™ìž‘í•œë‹¤. <br />
+                - ìžì‹ì€ ë¶€ëª¨ë¥¼ ê¸°ì¤€ìœ¼ë¡œ ì›€ì§ì¸ë‹¤. <br />
             </p>
             <h4>absolute</h4>
             <p>
-                - absolute¸¦ ¼±¾ðÇÏ¸é, ´õÀÌ»ó ÀÚ½ÄÀº parent¿¡ ¼ÓÇÏÁö ¾Ê´Â´Ù. <br />
-                - absolute¸¸ ¼±¾ðÇÒ °æ¿ì¿£ offsetÀº ºÎ¸ðÀÌ´Ù. <br />
-                - ºÎ¸ð¿Í link°¡ ²÷¾îÁö±â ¶§¹®¿¡ Å©±â°¡ contents Å©±â·Î Ç¥½ÃµÈ´Ù. <br />
-                ¶ÇÇÑ ºÎ¸ðµµ ÀÚ½ÄÀÇ ¼Ó¼ºÀ» »«´Ù. <br />
-                - positionÀÌ staticÀÌ ¾Æ´Ñ °ªÀ» °¡Áø ºÎ¸ð¸¦ ±âÁØÀ¸·Î ÇÑ´Ù. <br />
-                (¿¹-¾Æ·¡ ±×¸² ÂüÁ¶)<br />
+                - absoluteë¥¼ ì„ ì–¸í•˜ë©´, ë”ì´ìƒ ìžì‹ì€ parentì— ì†í•˜ì§€ ì•ŠëŠ”ë‹¤. <br />
+                - absoluteë§Œ ì„ ì–¸í•  ê²½ìš°ì—” offsetì€ ë¶€ëª¨ì´ë‹¤. <br />
+                - ë¶€ëª¨ì™€ linkê°€ ëŠì–´ì§€ê¸° ë•Œë¬¸ì— í¬ê¸°ê°€ contents í¬ê¸°ë¡œ í‘œì‹œëœë‹¤. <br />
+                ë˜í•œ ë¶€ëª¨ë„ ìžì‹ì˜ ì†ì„±ì„ ëº€ë‹¤. <br />
+                - positionì´ staticì´ ì•„ë‹Œ ê°’ì„ ê°€ì§„ ë¶€ëª¨ë¥¼ ê¸°ì¤€ìœ¼ë¡œ í•œë‹¤. <br />
+                (ì˜ˆ-ì•„ëž˜ ê·¸ë¦¼ ì°¸ì¡°)<br />
                    <div id="grand"> grand
                        <div id="parent"> parent, mom and dady
                            <div id="child">child</div> 
@@ -47,12 +48,12 @@
             </p>
             <h4>fixed</h4>
             <p>
-                - absolute¿Í ¸¶Âù°¡Áö·Î ºÎ¸ð¿ÍÀÇ link°¡ ²÷¾îÁø´Ù. <br />
-                - ±âÁØÀ» html·Î »ï´Â´Ù. <br />
-                - ½ºÅ©·ÑÀ» ¿òÁ÷¿©µµ, fixed¸¦ ¼±¾ðÇÏ¸é, ¿òÁ÷ÀÌÁö ¾Ê´Â´Ù. <br />
-                (¿¹-ÆäÀÌÁö ¾Æ·¡ ÂüÁ¶) <br />
+                - absoluteì™€ ë§ˆì°¬ê°€ì§€ë¡œ ë¶€ëª¨ì™€ì˜ linkê°€ ëŠì–´ì§„ë‹¤. <br />
+                - ê¸°ì¤€ì„ htmlë¡œ ì‚¼ëŠ”ë‹¤. <br />
+                - ìŠ¤í¬ë¡¤ì„ ì›€ì§ì—¬ë„, fixedë¥¼ ì„ ì–¸í•˜ë©´, ì›€ì§ì´ì§€ ì•ŠëŠ”ë‹¤. <br />
+                (ì˜ˆ-íŽ˜ì´ì§€ ì•„ëž˜ ì°¸ì¡°) <br />
                             <div id="fixed">
-                                fixedµÈ À§Á¬
+                                fixedëœ ìœ„ì ¯
                             </div>
             </p>
 
