--- a/5.html
+++ b/5.html
@@ -3,7 +3,7 @@
     <head>
         <title>오늘의 공부</title>
         <link href="./css.css" rel="stylesheet" />
-        <meta charset='utf8'>
+        <meta charset="utf-8">
     </head>
     <body>
         <div id="c1" class="box">
